issueResolved: card overflow issue resolved

--- a/Frontend/src/components/LiveSession/index.module.css
+++ b/Frontend/src/components/LiveSession/index.module.css
@@ -1,5 +1,5 @@
 .liveMain {
-  width: 90%;
+  width: 97%;
   height: 80vh;
   background: linear-gradient(
     230deg,
@@ -17,6 +17,7 @@
   align-items: center;
   margin: auto;
   border-radius: 20px;
+  margin-top: 70px;
 }
 
 @-webkit-keyframes gradient {
@@ -30,6 +31,7 @@
     background-position: 0% 65%;
   }
 }
+
 @keyframes gradient {
   0% {
     background-position: 0% 65%;
@@ -85,6 +87,7 @@
     transform: translateX(0%);
   }
 }
+
 .carddd {
   background: rgba(255, 255, 255, 0.15);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.223);
@@ -97,7 +100,9 @@
   color: whitesmoke;
   display: flex;
   margin: 0px 5px;
+  padding-top: 10px;
 }
+
 .spktopic {
   background: rgba(255, 255, 255, 0.15);
   font-size: 20px;
@@ -117,6 +122,7 @@
   color: #001147;
   margin-top: 0px;
 }
+
 .spk1 {
   padding: 0px;
   position: relative;
@@ -126,11 +132,13 @@
   justify-content: center;
   margin-right: 20px;
 }
+
 .spkimg {
   position: relative;
  
   border-radius: 10px;
 }
+
 .spk1text {
   color: #001147;
   position: relative;
@@ -197,6 +205,7 @@
   transition: all 1s;
   font-size: 16px;
 }
+
 .btn-notlive {
   width: 150px;
   font-size: 20px;
@@ -211,6 +220,9 @@
   font-size: 16px;
 }
 
+@media screen and (max-width: 550px) {
+  
+}
 @keyframes move {
   0% {
     background-position: 0 0;
